--- a/WebScraping/Passquoten_Bundesliga1.ipynb
+++ b/WebScraping/Passquoten_Bundesliga1.ipynb
@@ -29,22 +29,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m elements \u001b[39m=\u001b[39m soup\u001b[39m.\u001b[39mfind_all(\u001b[39m'\u001b[39m\u001b[39mdiv\u001b[39m\u001b[39m'\u001b[39m,  class_\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mteam-name-list\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     15\u001b[0m element \u001b[39m=\u001b[39m soup\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39mdiv\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mid\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtd\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> 16\u001b[0m attribute_value \u001b[39m=\u001b[39m element[\u001b[39m'\u001b[39;49m\u001b[39ma\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[0;32m     17\u001b[0m nested_elements \u001b[39m=\u001b[39m element\u001b[39m.\u001b[39mfind_all(\u001b[39m'\u001b[39m\u001b[39mspan\u001b[39m\u001b[39m'\u001b[39m, class_\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mnested-class\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
-    "url = 'https://www.bundesliga.com/de/bundesliga/statistiken/clubs/passquote'\n",
+    "url = 'https://www.ran.de/fussball/bundesliga/bundesliga-statistiken'\n",
     "response = requests.get(url)\n",
     "\n",
-    "# Prüfe, ob die Anfrage erfolgreich war (Statuscode 200)\n",
+    "# Prüfen, ob die Anfrage erfolgreich war (Statuscode 200)\n",
     "if response.status_code == 200:\n",
     "    soup = BeautifulSoup(response.text, 'html.parser')\n",
     "    \n",
-    "    # Hier kannst du die relevanten Daten aus der Webseite extrahieren, z.B.:\n",
-    "    results = soup.find_all('div', class_='result')\n",
-    "    statistics = soup.find_all('div', class_='statistics')\n",
+    "    # relevante Daten aus der Webseite extrahieren:\n",
+    "    results = soup.find_all('div', class_='Mannschaft')\n",
+    "    statistics = soup.find_all('div', class_='Passquote')\n",
     "else:\n",
-    "    print('Fehler beim Abrufen der Webseite')"
+    "    print('Fehler beim Abrufen der Webseite')\n",
+    "    \n",
+    "elements = soup.find_all('div',  class_='team-name-list')\n",
+    "element = soup.find('div', id='td')\n",
+    "attribute_value = element['a']\n",
+    "nested_elements = element.find_all('span', class_='nested-class')"
    ]
   },
   {
@@ -61,40 +78,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Verbinden mit der DB\n",
     "def connect_and_save_data(results, statistics):\n",
     "    try:\n",
-    "        connection = psycopg2.connect(\n",
-    "            dbname='your_database_name',\n",
-    "            user='your_user',\n",
-    "            password='your_password',\n",
-    "            host='your_host',\n",
-    "            port='your_port'\n",
-    "                \n",
-    "            host=\"localhost\",\n",
-    "            database=\"PSQL_ADSFS2023Gruppe15\",\n",
+    "        connection = psycopg2.connect(           \n",
+    "            dbname=\"PSQL_ADSFS2023Gruppe15\",\n",
     "            user=\"ADSFS2023Gruppe15\",\n",
     "            password=\"ADS_FS_2023_G15!?\"\n",
+    "            host=\"localhost\",\n",
+    "            ports='5432:5432'\n",
     "        )\n",
     "\n",
     "        cursor = connection.cursor()\n",
     "\n",
-    "        # Erstelle die Tabelle, falls sie noch nicht existiert\n",
+    "        # Erstellen der Tabelle für die Passquoten\n",
     "        create_table_query = '''\n",
-    "            CREATE TABLE IF NOT EXISTS bundesliga_results (\n",
-    "                id SERIAL PRIMARY KEY,\n",
-    "                result TEXT NOT NULL,\n",
-    "                statistics TEXT NOT NULL\n",
+    "            CREATE TABLE IF NOT EXISTS bundesliga_passquoten (\n",
+    "                Mannschafts_ID INTEGER,\n",
+    "                Mannschaft TEXT,\n",
+    "                Passquote INTEGER\n",
+    "                Datum DATE\n",
     "            );\n",
     "        '''\n",
     "        cursor.execute(create_table_query)\n",
     "        connection.commit()\n",
     "\n",
-    "        # Füge die extrahierten Daten in die Tabelle ein\n",
+    "        # Einfügen der extrahierten Daten in die Tabelle\n",
     "        for result, statistic in zip(results, statistics):\n",
     "            insert_data_query = '''\n",
-    "                INSERT INTO bundesliga_results (result, statistics) VALUES (%s, %s);\n",
+    "                INSERT INTO bundesliga_results (Mannschaft, Passquote, Datm) VALUES (%s, %s, sysdate);\n",
     "            '''\n",
-    "            cursor.execute(insert_data_query, (result.text, statistic.text))\n",
+    "            cursor.execute(insert_data_query, (Mannschaft.text, Passquote.text))\n",
     "        \n",
     "        connection.commit()\n",
     "\n",
