--- a/WebScraping/Torschuesse_Bundesliga1.ipynb
+++ b/WebScraping/Torschuesse_Bundesliga1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def connect_and_save_data(matchday, team_name, pass_percentage):\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import psycopg2\n",
+    "\n",
+    "\n",
+    "def connect_and_save_data(matchday, team_name, value):\n",
     "    try:\n",
     "        connection = psycopg2.connect(\n",
     "            dbname='PSQL_ADSFS2023Gruppe15',\n",
@@ -45,23 +50,22 @@
     "\n",
     "        cursor = connection.cursor()\n",
     "\n",
-    "        # Erstelle die Tabelle, falls sie noch nicht existiert\n",
     "        create_table_query = '''\n",
-    "            CREATE TABLE IF NOT EXISTS bundesliga_pass_stats (\n",
+    "            CREATE TABLE IF NOT EXISTS bundesliga_shots_stats (\n",
     "                id SERIAL PRIMARY KEY,\n",
     "                matchday INTEGER NOT NULL,\n",
     "                team_name TEXT NOT NULL,\n",
-    "                pass_percentage NUMERIC NOT NULL\n",
+    "                value NUMERIC NOT NULL\n",
     "            );\n",
     "        '''\n",
     "        cursor.execute(create_table_query)\n",
     "        connection.commit()\n",
     "\n",
-    "        # Füge die extrahierten Daten in die Tabelle ein\n",
     "        insert_data_query = '''\n",
-    "            INSERT INTO bundesliga_pass_stats (matchday, team_name, pass_percentage) VALUES (%s, %s, %s);\n",
+    "            INSERT INTO bundesliga_shots_stats (matchday, team_name, value)\n",
+    "            VALUES (%s, %s, %s);\n",
     "        '''\n",
-    "        cursor.execute(insert_data_query, (matchday, team_name, float(pass_percentage.replace(',', '.'))))\n",
+    "        cursor.execute(insert_data_query, (matchday, team_name, value))\n",
     "        connection.commit()\n",
     "\n",
     "    except (Exception, psycopg2.Error) as error:\n",
@@ -72,29 +76,29 @@
     "            cursor.close()\n",
     "            connection.close()\n",
     "\n",
-    "# Durchlaufe die Spieltage (md1 bis md34) und lade die Daten für jeden Spieltag\n",
-    "for matchday in range(1, 35):\n",
-    "    url = f'https://www.sport.de/fussball/deutschland-bundesliga/se45495/2022-2023/ro132754/spieltag/md{matchday}/teamstatistik-paesse/'\n",
     "\n",
-    "    response = requests.get(url)\n",
+    "def fetch_and_save_shots_stats():\n",
+    "    for matchday in range(1, 35):\n",
+    "        url = f'https://www.sport.de/fussball/deutschland-bundesliga/se45495/2022-2023/ro132754/spieltag/md{matchday}/teamstatistik-torschuesse/'\n",
+    "        response = requests.get(url)\n",
     "\n",
-    "    if response.status_code == 200:\n",
-    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "        if response.status_code == 200:\n",
+    "            soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
-    "        # Suche nach allen Mannschaftsnamen und Passquoten\n",
-    "        team_elements = soup.find_all('td', class_='team-name team-name-list')\n",
-    "        pass_percentage_elements = soup.find_all('td', class_='team_stats-passes_complete_percentage team_stats-passes_complete_percentage-format')\n",
+    "            team_elements = soup.find_all('td', class_='team-name team-name-list')\n",
+    "            shots_elements = soup.find_all('td', class_='team_stats-torschuesse team_stats-torschuesse-format')\n",
     "\n",
-    "        # Iteriere über die gefundenen Elemente und extrahiere die gewünschten Informationen\n",
-    "        for team_element, pass_percentage_element in zip(team_elements, pass_percentage_elements):\n",
-    "            team_name = team_element.text.strip()\n",
-    "            pass_percentage = pass_percentage_element.text.strip()\n",
+    "            for team_element, shots_element in zip(team_elements, shots_elements):\n",
+    "                team_name = team_element.text.strip()\n",
+    "                shots_value = shots_element.text.strip()\n",
     "\n",
-    "            # Speichere die Daten in der PostgreSQL-Datenbank\n",
-    "            connect_and_save_data(matchday, team_name, pass_percentage)\n",
+    "                connect_and_save_data(matchday, team_name, shots_value)\n",
     "\n",
-    "    else:\n",
-    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday}')"
+    "        else:\n",
+    "            print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Torschüsse')\n",
+    "\n",
+    "\n",
+    "fetch_and_save_shots_stats()"
    ]
   }
  ],
