--- a/WebScraping/Passquoten_Bundesliga1.ipynb
+++ b/WebScraping/Passquoten_Bundesliga1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +44,6 @@
     "        )\n",
     "\n",
     "        cursor = connection.cursor()\n",
-    "\n",
-    "        # Erstelle die Tabelle, falls sie noch nicht existiert\n",
-    "        create_table_query = '''\n",
-    "            CREATE TABLE IF NOT EXISTS bundesliga_pass_stats (\n",
-    "                id SERIAL PRIMARY KEY,\n",
-    "                matchday INTEGER NOT NULL,\n",
-    "                team_name TEXT NOT NULL,\n",
-    "                pass_percentage NUMERIC NOT NULL\n",
-    "            );\n",
-    "        '''\n",
-    "        cursor.execute(create_table_query)\n",
-    "        connection.commit()\n",
     "\n",
     "        # Füge die extrahierten Daten in die Tabelle ein\n",
     "        insert_data_query = '''\n",
@@ -100,7 +88,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "adsenv",
    "language": "python",
    "name": "python3"
   },
@@ -114,12 +102,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c261aea317cc0286b3b3261fbba9abdec21eaa57589985bb7a274bf54d6cc0a7"
+    "hash": "cf1ba55af98fa155eb6f9507898a012b292e4dea61caf6d17930c9c692d43aca"
    }
   }
  },
