--- a/WebScraping/Zweikaempfe_Bundesliga1.ipynb
+++ b/WebScraping/Zweikaempfe_Bundesliga1.ipynb
@@ -50,17 +50,6 @@
     "\n",
     "        cursor = connection.cursor()\n",
     "\n",
-    "        create_table_query = '''\n",
-    "            CREATE TABLE IF NOT EXISTS bundesliga_duels_stats (\n",
-    "                id SERIAL PRIMARY KEY,\n",
-    "                matchday INTEGER NOT NULL,\n",
-    "                team_name TEXT NOT NULL,\n",
-    "                value NUMERIC NOT NULL\n",
-    "            );\n",
-    "        '''\n",
-    "        cursor.execute(create_table_query)\n",
-    "        connection.commit()\n",
-    "\n",
     "        insert_data_query = '''\n",
     "            INSERT INTO bundesliga_duels_stats (matchday, team_name, value)\n",
     "            VALUES (%s, %s, %s);\n",
@@ -104,7 +93,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "adsenv",
    "language": "python",
    "name": "python3"
   },
@@ -118,12 +107,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c261aea317cc0286b3b3261fbba9abdec21eaa57589985bb7a274bf54d6cc0a7"
+    "hash": "cf1ba55af98fa155eb6f9507898a012b292e4dea61caf6d17930c9c692d43aca"
    }
   }
  },
