Korrektur des Scrappings, so dass Daten ausgelsen werden und auch in die DB geschrieben

--- a/WebScraping/Zweikaempfe_Bundesliga1.ipynb
+++ b/WebScraping/Zweikaempfe_Bundesliga1.ipynb
@@ -75,7 +75,7 @@
     "            soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
     "            team_elements = soup.find_all('td', class_='team-name team-name-list')\n",
-    "            duels_elements = soup.find_all('td', class_='team_stats-zweikaempfe team_stats-zweikaempfe-format')\n",
+    "            duels_elements = soup.find_all('td', class_='team_stats-duels team_stats-duels-list')\n",
     "\n",
     "            for team_element, duels_element in zip(team_elements, duels_elements):\n",
     "                team_name = team_element.text.strip()\n",
