--- a/ExplorativeDatenanalyse/ExplorativeDatenanalyse.ipynb
+++ b/ExplorativeDatenanalyse/ExplorativeDatenanalyse.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,66 +257,66 @@
     "plt.ylabel('Anzahl Tore')\n",
     "\n",
     "# Diagramm anzeigen\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4588\\3763131543.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mcount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf_resultate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'winner_team_id'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0msearch_value\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m         \u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\adihu\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1525\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mfinal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1526\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1527\u001b[1;33m         raise ValueError(\n\u001b[0m\u001b[0;32m   1528\u001b[0m             \u001b[1;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1529\u001b[0m             \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
-     ]
-    }
-   ],
    "source": [
-    "# TBD: Listet die Mannschaft mit den meisten Siegen auf\n",
-    "search_value = df_mannschaften.team_id\n",
-    "\n",
-    "# Zählen Sie die Anzahl der Felder mit dem Suchwert in der Spalte 'A'\n",
-    "count = 0\n",
-    "for value in df_resultate['winner_team_id']:\n",
-    "    if value == search_value:\n",
-    "        count += 1\n",
-    "\n",
-    "# Geben Sie die Anzahl der gefundenen Felder aus\n",
-    "print(\"Die Anzahl der Felder mit dem Wert\", search_value, \"ist:\", count)"
+    "Siege pro Mannschaft"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Series([], Name: winner_team_id, dtype: int64)\n"
+      "      winner_team_id  team_id                mannschaft  punkte  tore  rang\n",
+      "NaN               68        0                       NaN     NaN   NaN   NaN\n",
+      "2.0               20        7         Borussia Dortmund    64.0  73.0  None\n",
+      "1.0               19       40         FC Bayern München    65.0  83.0  None\n",
+      "3.0               17     1635                RB Leipzig    57.0  55.0  None\n",
+      "4.0               16       80        1. FC Union Berlin    56.0  44.0  None\n",
+      "5.0               16      112               SC Freiburg    56.0  46.0  None\n",
+      "6.0               14        6          Bayer Leverkusen    48.0  54.0  None\n",
+      "8.0               12       81           1. FSV Mainz 05    45.0  51.0  None\n",
+      "7.0               12      131             VfL Wolfsburg    46.0  54.0  None\n",
+      "9.0               11       91       Eintracht Frankfurt    43.0  51.0  None\n",
+      "11.0              10       87  Borussia Mönchengladbach    39.0  46.0  None\n",
+      "10.0              10       65                1. FC Köln    41.0  47.0  None\n",
+      "12.0              10      134             Werder Bremen    35.0  49.0  None\n",
+      "14.0               9      175       TSG 1899 Hoffenheim    32.0  42.0  None\n",
+      "13.0               9       95               FC Augsburg    34.0  40.0  None\n",
+      "17.0               8      129                VfL Bochum    28.0  33.0  None\n",
+      "15.0               7        9             FC Schalke 04    30.0  31.0  None\n",
+      "18.0               6       54                Hertha BSC    25.0  39.0  None\n",
+      "16.0               6       16             VfB Stuttgart    28.0  39.0  None\n"
      ]
     }
    ],
    "source": [
-    "# TBD: Listet die Mannschaft mit den meisten Siegen auf\n",
-    "# Liste von Suchwerten\n",
-    "search_values = ['40', '100']\n",
+    "# Zählt die Siege pro Team\n",
     "\n",
-    "# Filtern Sie die Spalte 'name' von df2 nach den Suchwerten\n",
-    "filtered_df = df_resultate[df_resultate['winner_team_id'].isin(search_values)]\n",
+    "# Erstellen Sie eine Ergebnisliste mit value_counts()\n",
+    "value_counts = df_resultate['winner_team_id'].value_counts()\n",
     "\n",
-    "# Zählen Sie die Häufigkeit jedes Suchwerts\n",
-    "counts = filtered_df['winner_team_id'].value_counts()\n",
+    "# Führt die Counts mit den Mannschaftsnamen zusammen\n",
+    "merged_df = pd.merge(value_counts, df_mannschaften, how='left', left_index=True, right_on='team_id')\n",
     "\n",
-    "print(counts)"
+    "# Bereinigen der untentschiedenen Spielen\n",
+    "df = merged_df.drop(merged_df[merged_df['team_id'] == '0'].index)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#print(value_counts)\n",
+    "print(merged_df)\n"
    ]
   },
   {
