--- a/WebScraping/Get_Data_Bundesliga1.ipynb
+++ b/WebScraping/Get_Data_Bundesliga1.ipynb
@@ -46,6 +46,12 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -862,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,28 +882,26 @@
     "        team_elements = soup.find_all('td', class_='team-name team-name-list')\n",
     "        corner_left_elements = soup.find_all('td', class_='team_stats-corner_kicks_left team_stats-corner_kicks_left-list')\n",
     "        corner_right_elements = soup.find_all('td', class_='team_stats-corner_kicks_right team_stats-corner_kicks_right-list')\n",
-    "        corner_total_elements = soup.find_all('td', class_='team_stats-corner_kicks team_stats-corner_kicks-list hs-sorted-value')\n",
     "\n",
-    "        print(team_elements)\n",
-    "        for team_element, corner_left_element, corner_right_element, corner_total_element in zip(team_elements, corner_left_elements, corner_right_elements, corner_total_elements):\n",
+    "        for team_element, corner_left_element, corner_right_element, corner_total_element in zip(team_elements, corner_left_elements, corner_right_elements):\n",
     "            team_name = team_element.text.strip()\n",
     "            corner_left = corner_left_element.text.strip()\n",
     "            corner_right = corner_right_element.text.strip()\n",
-    "            corner_total = corner_total_element.text.strip()\n",
+    "            corner_total = corner_left + corner_right\n",
     "            print(team_name)\n",
     "\n",
     "            insert_data_query = '''\n",
     "                INSERT INTO bundesliga_corners (matchday, team_id, corner_left, corner_right, corner_total)\n",
     "                VALUES (%s, %s, %s, %s, %s);\n",
     "                '''\n",
-    "            team_id =get_team_id(team_name)\n",
+    "            team_id = get_team_id(team_name)\n",
     "        \n",
     "            cursor.execute(insert_data_query, (matchday, team_id, corner_left, corner_right, corner_total))\n",
     "                        \n",
     "            connection.commit()\n",
     "\n",
     "    else:\n",
-    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Laufleistung')"
+    "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Eckstösse')"
    ]
   }
  ],
@@ -917,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
