Files mit Kommentaren und Markups ergänzt

--- a/WebScraping/Get_Data_Bundesliga1.ipynb
+++ b/WebScraping/Get_Data_Bundesliga1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alle Imports die benötigt werden um die gesuchten Daten mittels Webscraping zu sammeln"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -13,6 +21,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kontrollvariable\n",
+    "Mittels der folgender Variable soll jewils überprüft werden, ob die Verbindung zur DB steht"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -20,6 +37,16 @@
    "source": [
     "# Variablen\n",
     "conn_Ok = True\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nutz eine Try-Except Methode, um die Verbindung zur Datenbank zu überprüfen\n",
+    "Kann die Verbindung im Try block hergestellt werden bleibt die Variable conn_Ok als True definiert\n",
+    "Ist dies nicht der Fall fällt es in den Except block und setzty die Variable auf False"
    ]
   },
   {
@@ -49,7 +76,13 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Eine Funktion die aufgerufen wird und den Teamnamen als Input erwartet.\n",
+    "Da die Daten von verschiedenen Quellen kommen,  müssen die Teamnamen erst bereinigt und vereinheitlicht werden (wo nötig)\n",
+    "\n",
+    "Danach wird eine SQL Abfrage durchgeführt, die mit hilfe des Teamnamens die Team ID herausfindet.\n",
+    "Die Team ID wird dann zurückgegeben."
+   ]
   },
   {
    "cell_type": "code",
@@ -75,6 +108,25 @@
     "        return result\n",
     "    else:\n",
     "        print(f'Keine Übereinstimmung für {team_name} gefunden')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check ob conn_Ok = True\n",
+    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
+    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
+    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Pass-Daten). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "\n",
+    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "\n",
+    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
+    "\n",
+    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
+    "\n",
+    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
    ]
   },
   {
@@ -124,6 +176,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check ob conn_Ok = True\n",
+    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
+    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
+    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Schüsse aufs Tor). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td>-Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "\n",
+    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "\n",
+    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
+    "\n",
+    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
+    "\n",
+    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -155,6 +226,25 @@
     "\n",
     "    else:\n",
     "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Torschüsse')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check ob conn_Ok = True\n",
+    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
+    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
+    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Ballberührungen). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "\n",
+    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "\n",
+    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
+    "\n",
+    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
+    "\n",
+    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
    ]
   },
   {
@@ -192,6 +282,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check ob conn_Ok = True\n",
+    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
+    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
+    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Zweikampf-Daten). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "\n",
+    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "\n",
+    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
+    "\n",
+    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
+    "\n",
+    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -225,6 +334,25 @@
     "\n",
     "    else:\n",
     "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Zweikämpfe')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check ob conn_Ok = True\n",
+    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
+    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
+    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Lauf-Daten). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "\n",
+    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "\n",
+    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
+    "\n",
+    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
+    "\n",
+    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
    ]
   },
   {
@@ -813,7 +941,6 @@
     "            for team_element, distance_element in zip(team_elements, distance_elements):\n",
     "                team_name = team_element.text.strip()\n",
     "                distance_total = distance_element.text.strip()\n",
-    "                print(distance_total)\n",
     "\n",
     "                insert_data_query = '''\n",
     "                    INSERT INTO bundesliga_distance_stats (matchday, team_id, distance_total)\n",
@@ -830,6 +957,25 @@
     "\n",
     "    else:\n",
     "        print(f'Fehler beim Abrufen der Webseite für Spieltag {matchday} und Laufleistung')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check ob conn_Ok = True\n",
+    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
+    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
+    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Freistösse). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "\n",
+    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "\n",
+    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
+    "\n",
+    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
+    "\n",
+    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
    ]
   },
   {
@@ -867,6 +1013,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check ob conn_Ok = True\n",
+    "For-Schleife um die Daten jedes einzelnen Spieltages abzufragen (Total 35 Spieltage)\n",
+    "Mit hilfe der request-Methode die gesuchte Seite abfragen\n",
+    "Wenn der Status code erfolg meldet (200) wir mittels BeautifulSoup die Seite durchsucht (in diesem Fall nach Eckbällen). Die Suche erfolgt mittels class-Bezeichnung. Wird die Bezeichnung gefunden, wird das entsprechende <td> Tag ausgelesen und in einer Liste Abgespeichert.\n",
+    "\n",
+    "Mit einer weiteren For-Schleife werden die einzelen Einträge der erzeugten Listen abgerufen, auf das Wesentliche gekürzt.\n",
+    "\n",
+    "Vorbereitung der SQL Query in der Variable insert_data_query\n",
+    "\n",
+    "Abrufen der Funktion get_team_id um die ensprechende Team ID aus der DB zu lesen\n",
+    "\n",
+    "mittels cursor.execut() das ausführen der SQL Abfrage und mittels Connection.commit() das abspeichern in der DB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -888,7 +1053,6 @@
     "            corner_left = corner_left_element.text.strip()\n",
     "            corner_right = corner_right_element.text.strip()\n",
     "            corner_total = corner_left + corner_right\n",
-    "            print(team_name)\n",
     "\n",
     "            insert_data_query = '''\n",
     "                INSERT INTO bundesliga_corners (matchday, team_id, corner_left, corner_right, corner_total)\n",
